Introduced spec builder factories (#48)